# kratos-collar

./: CMakeLists.txt  LSM6DSOX_CUSTOM.cpp  LSM6DSOX_CUSTOM.h  kratos-collar.ino  readme.md
